# Colour-Me

./: bot.py  pyproject.toml
ext/: colour_roles.py  misc.py  topgg.py
